--- a/apps.html
+++ b/apps.html
@@ -87,7 +87,7 @@
     <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
     <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
     <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-    <li style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+    <li style="float:right; border-right: 0.5px solid #bbb;"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
 </ul>
 
     <h1 id="textHeader" align="center" style="font-family:verdana;">K-Studios Applications</h1><br>
