--- a/clips.html
+++ b/clips.html
@@ -95,7 +95,7 @@ footer {
     <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
     <li class="active"><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
     <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-    <li style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+    <li style="float:right; border-right: 0.5px solid #bbb;"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
 </ul>
   <h1 id="title">ExKayEm_PL's Favourite Clips</h1>
   <br>
