--- a/profile.html
+++ b/profile.html
@@ -39,11 +39,19 @@
               }
         
               body {
-                        background-image: url('https://i.imgur.com/jXUs4Wu.png');
-                        background-size: cover; /* Adjust background size as needed */
-                        background-repeat: no-repeat;
-                        background-attachment: fixed;
-                    }
+                background-image: url('https://i.imgur.com/jXUs4Wu.png');
+                background-size: cover; /* Adjust background size as needed */
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+              }
+              
+              footer {
+                background-color: #212121;
+                color: white;
+                padding: 10px;
+                text-align: center;
+                font-family: verdana;
+              }
         </style>
     </head>
     <body>
@@ -53,7 +61,13 @@
             <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
             <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
             <li class="active" style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-            <li style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+            <li style="float:right; border-right: 0.5px solid #bbb;"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
         </ul>
+        <br>
+        <br>
+        <footer>
+          <p>K-Studios® - All rights reserved!</p>
+          <p>2019 - 2024</p>
+        </footer>
     </body>
 </html>
